// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`models 1`] = `
{
  "body": "",
  "headers": {},
  "method": "GET",
  "url": "http://localhost:11434/api/tags",
}
`;

exports[`models 2`] = `
{
  "body": "",
  "headers": {
    "authorization": "Bearer <key>",
    "content-type": "application/json",
  },
  "method": "GET",
  "url": "https://api.openai.com/v1/models",
}
`;

exports[`models 3`] = `
{
  "body": "",
  "headers": {
    "anthropic-version": "2023-06-01",
    "content-type": "application/json",
    "x-api-key": "<key>",
  },
  "method": "GET",
  "url": "https://api.anthropic.com/v1/models",
}
`;

exports[`dump 1`] = `
{
  "cost": undefined,
  "input": {},
  "options": {},
  "output": undefined,
  "performance": undefined,
  "provider": "ollama",
  "type": "models",
  "version": "0.3.0",
}
`;

exports[`dump 2`] = `
{
  "cost": undefined,
  "input": {},
  "options": {
    "apiKey": "<key>",
  },
  "output": undefined,
  "performance": undefined,
  "provider": "openai",
  "type": "models",
  "version": "0.3.0",
}
`;

exports[`dump 3`] = `
{
  "cost": undefined,
  "input": {},
  "options": {
    "apiKey": "<key>",
  },
  "output": undefined,
  "performance": undefined,
  "provider": "anthropic",
  "type": "models",
  "version": "0.3.0",
}
`;
